--- a/_config.yml
+++ b/_config.yml
@@ -13,23 +13,23 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/New_York
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Chris Reynolds # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Portfolio of Current Projects # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://ECTO-1A.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: ECTO-1A # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -37,7 +37,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Chris Reynolds
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 'https://media.licdn.com/dms/image/D4E03AQFcS6gSsTzU8A/profile-displayphoto-shrink_800_800/0/1675651519617?e=2147483647&v=beta&t=FPeAYkDjDaYBVOHDX8zfgkZ0V7yVAPfkmVZizJzWzXk'
 
 # the avatar on sidebar, support local or CORS resources
 avatar:
