--- a/_config.yml
+++ b/_config.yml
@@ -154,7 +154,7 @@ defaults:
       layout: page
       permalink: /:title/
   - scope:
-      path: assets/favicons
+      path: assets/img/favicons
     values:
       swcache: true
   - scope:
