--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,14 +2,17 @@
 
 - type: github
   icon: "fab fa-github"
-
+  url: 'https://github.com/ECTO-1A'
+  
 - type: twitter
   icon: "fab fa-twitter"
-
+  url: 'https://x.com/_say__10_'
+  
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
-
+  url: 'theecto1a@gmail.com
+  
 - type: rss
   icon: "fas fa-rss"
   noblank: true
