--- a/_config.yml
+++ b/_config.yml
@@ -32,17 +32,17 @@ github:
   username: ECTO-1A # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: _say__10_ # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Chris Reynolds
-  email: example@domain.com # change to your email address
+  email: theecto1a@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://x.com/_say__10_ # change to your twitter homepage
+    - https://github.com/ECTO-1A # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
